--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NGC-3628/CSE341-node.git",
-    "git-update": "git add . && git commit -m \"pdate\" && git push"
+    "git-update": "git add . && git commit -m \"pdate\" && git push",
+    "start-prod": "node server.js"
   },
   "keywords": [],
   "author": "",
